WalletHistory method and hendler added
