# api/router.go
@@ -24,4 +24,5 @@ func New(options Options) {
 	http.HandleFunc("/wallet/check/balance", handler.WalletCheckBalance)
 	http.HandleFunc("/wallet/fill", handler.WalletFill)
 	http.HandleFunc("/wallet/reduce", handler.WalletReduce)
+	http.HandleFunc("/wallet/history", handler.WalletHistory)
 }
